tests/idris2/error/perror022/Indent.idr
record Rec (a : Type)
b : Int
